--- a/static/demo/configuration.yaml
+++ b/static/demo/configuration.yaml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2025 Benjamin Nakaten (GFZ) <bnakaten@gfz.de>
+# SPDX-FileCopyrightText: 2025 GFZ Helmholtz Centre for Geosciences
+#
+# SPDX-License-Identifier: CC-BY-4.0
+
 config:
   base: static/demo/
   compress: true
