--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,359 @@
+# SPDX-FileCopyrightText: 2025 Benjamin Nakaten (GFZ) <bnakaten@gfz.de>
+# SPDX-FileCopyrightText: 2025 GFZ Helmholtz Centre for Geosciences
+#
+# SPDX-License-Identifier: CC0-1.0
+
 name: gmlGUI
 channels:
   - conda-forge
 dependencies:
-  - python=3.13
-  - flask
-  - gdal
-  - geos
-  - matplotlib
-  - numpy
-  - pandas
-  - pip
-  - pyevtk
-  - pyvista
-  - pyyaml
-  - scipy
-  - streamlit
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
+  - aiohttp=3.11.14=py313h8060acc_0
+  - aiosignal=1.3.2=pyhd8ed1ab_0
+  - alsa-lib=1.2.13=hb9d3cd8_0
+  - altair=5.5.0=pyhd8ed1ab_1
+  - aom=3.9.1=hac33072_0
+  - attr=2.5.1=h166bdaf_1
+  - attrs=25.3.0=pyh71513ae_0
+  - aws-c-auth=0.8.6=hd08a7f5_4
+  - aws-c-cal=0.8.7=h043a21b_0
+  - aws-c-common=0.12.0=hb9d3cd8_0
+  - aws-c-compression=0.3.1=h3870646_2
+  - aws-c-event-stream=0.5.4=h04a3f94_2
+  - aws-c-http=0.9.4=hb9b18c6_4
+  - aws-c-io=0.17.0=h3dad3f2_6
+  - aws-c-mqtt=0.12.2=h108da3e_2
+  - aws-c-s3=0.7.13=h822ba82_2
+  - aws-c-sdkutils=0.2.3=h3870646_2
+  - aws-checksums=0.2.3=h3870646_2
+  - aws-crt-cpp=0.31.0=h55f77e1_4
+  - aws-sdk-cpp=1.11.510=h37a5c72_3
+  - azure-core-cpp=1.14.0=h5cfcd09_0
+  - azure-identity-cpp=1.10.0=h113e628_0
+  - azure-storage-blobs-cpp=12.13.0=h3cf044e_1
+  - azure-storage-common-cpp=12.8.0=h736e048_1
+  - azure-storage-files-datalake-cpp=12.12.0=ha633028_1
+  - blinker=1.9.0=pyhff2d567_0
+  - blosc=1.21.6=he440d0b_1
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - brotli-python=1.1.0=py313h46c70d0_2
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.4=hb9d3cd8_0
+  - ca-certificates=2025.1.31=hbcca054_0
+  - cachetools=5.5.2=pyhd8ed1ab_0
+  - cairo=1.18.4=h3394656_0
+  - certifi=2025.1.31=pyhd8ed1ab_0
+  - cffi=1.17.1=py313hfab6e84_0
+  - charset-normalizer=3.4.1=pyhd8ed1ab_0
+  - click=8.1.8=pyh707e725_0
+  - contourpy=1.3.1=py313h33d0bda_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.27=h54b06d7_7
+  - dav1d=1.2.1=hd590300_0
+  - dbus=1.13.6=h5008d03_3
+  - double-conversion=3.3.1=h5888daf_0
+  - expat=2.6.4=h5888daf_0
+  - ffmpeg=7.1.1=gpl_h0b79d52_704
+  - flask=3.1.0=pyhd8ed1ab_1
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.56.0=py313h8060acc_0
+  - freetype=2.13.3=h48d6fc4_0
+  - freexl=2.0.0=h9dce30a_2
+  - fribidi=1.0.10=h36c2ea0_0
+  - frozenlist=1.5.0=py313h8060acc_1
+  - gdal=3.10.2=py313h49478cc_5
+  - gdk-pixbuf=2.42.12=hb9ae30d_0
+  - geos=3.13.1=h97f6797_0
+  - geotiff=1.7.4=h3551947_0
+  - gettext=0.23.1=h5888daf_0
+  - gettext-tools=0.23.1=h5888daf_0
+  - gflags=2.2.2=h5888daf_1005
+  - giflib=5.2.2=hd590300_0
+  - gitdb=4.0.12=pyhd8ed1ab_0
+  - gitpython=3.1.44=pyhff2d567_0
+  - gl2ps=1.4.2=hae5d5c5_1
+  - glew=2.1.0=h9c3ff4c_2
+  - glog=0.7.1=hbabe93e_0
+  - gmp=6.3.0=hac33072_2
+  - graphite2=1.3.13=h59595ed_1003
+  - h2=4.2.0=pyhd8ed1ab_0
+  - harfbuzz=11.0.0=h76408a6_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=nompi_h2d575fe_109
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.10=pyhd8ed1ab_1
+  - importlib-metadata=8.6.1=pyha770c72_0
+  - importlib_resources=6.5.2=pyhd8ed1ab_0
+  - itsdangerous=2.2.0=pyhd8ed1ab_1
+  - jack=1.9.22=h7c63dc7_2
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - json-c=0.18=h6688a6e_0
+  - jsoncpp=1.9.6=hf42df4d_1
+  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py313h33d0bda_0
+  - krb5=1.21.3=h659f571_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - lerc=4.0.0=h27087fc_0
+  - level-zero=1.21.6=h84d6215_0
+  - libabseil=20250127.1=cxx17_hbbce691_0
+  - libaec=1.1.3=h59595ed_0
+  - libarchive=3.7.7=h4585015_3
+  - libarrow=19.0.1=h120c447_5_cpu
+  - libarrow-acero=19.0.1=hcb10f89_5_cpu
+  - libarrow-dataset=19.0.1=hcb10f89_5_cpu
+  - libarrow-substrait=19.0.1=h1bed206_5_cpu
+  - libasprintf=0.23.1=h8e693c7_0
+  - libasprintf-devel=0.23.1=h8e693c7_0
+  - libass=0.17.3=h52826cd_2
+  - libavif16=1.2.1=hbb36593_2
+  - libblas=3.9.0=31_h59b9bed_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcap=2.75=h39aace5_0
+  - libcblas=3.9.0=31_he106b2a_openblas
+  - libclang-cpp20.1=20.1.1=default_hb5137d0_0
+  - libclang13=20.1.1=default_h9c6a7e4_0
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.12.1=h332b0f4_0
+  - libdb=6.2.32=h9c3ff4c_0
+  - libde265=1.0.15=h00ab1b0_0
+  - libdeflate=1.23=h4ddbbb0_0
+  - libdrm=2.4.124=hb9d3cd8_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libegl=1.7.0=ha4b6fd6_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.4=h5888daf_0
+  - libffi=3.4.6=h2dba641_0
+  - libflac=1.4.3=h59595ed_0
+  - libgcc=14.2.0=h767d61c_2
+  - libgcc-ng=14.2.0=h69a702a_2
+  - libgcrypt-lib=1.11.0=hb9d3cd8_2
+  - libgdal-core=3.10.2=h05269f4_1
+  - libgettextpo=0.23.1=h5888daf_0
+  - libgettextpo-devel=0.23.1=h5888daf_0
+  - libgfortran=14.2.0=h69a702a_2
+  - libgfortran5=14.2.0=hf1ad2bd_2
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglib=2.84.0=h2ff4ddf_0
+  - libglu=9.0.3=h03adeef_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libgomp=14.2.0=h767d61c_2
+  - libgoogle-cloud=2.36.0=hc4361e1_1
+  - libgoogle-cloud-storage=2.36.0=h0121fbd_1
+  - libgpg-error=1.51=hbd13f7d_1
+  - libgrpc=1.71.0=he753a82_0
+  - libheif=1.19.7=gpl_hc18d805_100
+  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libiconv=1.18=h4ce23a2_1
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - libkml=1.3.0=hf539b9f_1021
+  - liblapack=3.9.0=31_h7ac8fdf_openblas
+  - libllvm20=20.1.1=ha7bfdaf_0
+  - liblzma=5.6.4=hb9d3cd8_0
+  - libmpdec=4.0.0=h4bc722e_0
+  - libnetcdf=4.9.2=nompi_h00e09a9_116
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hd590300_0
+  - libntlm=1.8=hb9d3cd8_0
+  - libogg=1.3.5=h4ab18f5_0
+  - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libopengl=1.7.0=ha4b6fd6_2
+  - libopentelemetry-cpp=1.19.0=hd1b1c89_0
+  - libopentelemetry-cpp-headers=1.19.0=ha770c72_0
+  - libopenvino=2025.0.0=hdc3f47d_3
+  - libopenvino-auto-batch-plugin=2025.0.0=h4d9b6c2_3
+  - libopenvino-auto-plugin=2025.0.0=h4d9b6c2_3
+  - libopenvino-hetero-plugin=2025.0.0=h981d57b_3
+  - libopenvino-intel-cpu-plugin=2025.0.0=hdc3f47d_3
+  - libopenvino-intel-gpu-plugin=2025.0.0=hdc3f47d_3
+  - libopenvino-intel-npu-plugin=2025.0.0=hdc3f47d_3
+  - libopenvino-ir-frontend=2025.0.0=h981d57b_3
+  - libopenvino-onnx-frontend=2025.0.0=h0e684df_3
+  - libopenvino-paddle-frontend=2025.0.0=h0e684df_3
+  - libopenvino-pytorch-frontend=2025.0.0=h5888daf_3
+  - libopenvino-tensorflow-frontend=2025.0.0=h684f15b_3
+  - libopenvino-tensorflow-lite-frontend=2025.0.0=h5888daf_3
+  - libopus=1.3.1=h7f98852_1
+  - libparquet=19.0.1=h081d1f1_5_cpu
+  - libpciaccess=0.18=hd590300_0
+  - libpng=1.6.47=h943b412_0
+  - libpq=17.4=h27ae623_0
+  - libprotobuf=5.29.3=h501fc15_0
+  - libre2-11=2024.07.02=hba17884_3
+  - librsvg=2.58.4=he92a37e_3
+  - librttopo=1.1.0=hd718a1a_18
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libspatialite=5.1.0=h366e088_13
+  - libsqlite=3.49.1=hee588c1_2
+  - libssh2=1.11.1=hf672d98_0
+  - libstdcxx=14.2.0=h8f9b012_2
+  - libstdcxx-ng=14.2.0=h4852527_2
+  - libsystemd0=257.4=h4e0b6ca_1
+  - libtheora=1.1.1=h4ab18f5_1006
+  - libthrift=0.21.0=h0e7cc3e_0
+  - libtiff=4.7.0=hd9ff511_3
+  - libudev1=257.4=hbe16f8c_1
+  - libunwind=1.6.2=h9c3ff4c_0
+  - liburing=2.9=h84d6215_0
+  - libusb=1.0.28=hb9d3cd8_0
+  - libutf8proc=2.10.0=h4c51ac1_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libva=2.22.0=h4f16b4b_2
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libvpx=1.14.1=hac33072_0
+  - libwebp-base=1.5.0=h851e524_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxkbcommon=1.8.1=hc4a0caf_0
+  - libxml2=2.13.7=h8d12d68_0
+  - libxslt=1.1.39=h76b75d6_0
+  - libzip=1.11.2=h6991a6a_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - loguru=0.7.2=py313h78bf25f_2
+  - lz4-c=1.10.0=h5888daf_1
+  - lzo=2.10=hd590300_1001
+  - markupsafe=3.0.2=py313h8060acc_1
+  - matplotlib=3.10.1=py313h78bf25f_0
+  - matplotlib-base=3.10.1=py313h129903b_0
+  - minizip=4.0.7=h05a5f5f_3
+  - mpg123=1.32.9=hc50e24c_0
+  - msgpack-python=1.1.0=py313h33d0bda_0
+  - multidict=6.2.0=py313h8060acc_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=9.0.1=h266115a_5
+  - mysql-libs=9.0.1=he0572af_5
+  - narwhals=1.32.0=pyhd8ed1ab_0
+  - ncurses=6.5=h2d0b736_3
+  - nlohmann_json=3.11.3=he02047a_1
+  - numpy=2.2.4=py313h17eae1a_0
+  - ocl-icd=2.3.2=hb9d3cd8_2
+  - opencl-headers=2024.10.24=h5888daf_0
+  - openh264=2.6.0=hc22cd8d_0
+  - openjpeg=2.5.3=h5fbd93e_0
+  - openldap=2.6.9=he970967_0
+  - openssl=3.4.1=h7b32b05_0
+  - orc=2.1.1=h17f744e_1
+  - packaging=24.2=pyhd8ed1ab_2
+  - pandas=2.2.3=py313ha87cce1_1
+  - pango=1.56.3=h9ac818e_1
+  - pcre2=10.44=hba22ea6_2
+  - pillow=11.1.0=py313h8db990d_0
+  - pip=25.0.1=pyh145f28c_0
+  - pixman=0.44.2=h29eaf8c_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+  - platformdirs=4.3.7=pyh29332c3_0
+  - pooch=1.8.2=pyhd8ed1ab_1
+  - proj=9.5.1=h0054346_0
+  - prometheus-cpp=1.3.0=ha5d0236_0
+  - propcache=0.2.1=py313h8060acc_1
+  - protobuf=5.29.3=py313h386a9ef_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - pugixml=1.15=h3f63f65_0
+  - pulseaudio-client=17.0=hac146a9_1
+  - pyarrow=19.0.1=py313h78bf25f_0
+  - pyarrow-core=19.0.1=py313he5f92c8_0_cpu
+  - pycparser=2.22=pyh29332c3_1
+  - pydeck=0.9.1=pyhd8ed1ab_0
+  - pyevtk=1.6.0=pyhb0bfe47_1
+  - pyparsing=3.2.3=pyhd8ed1ab_1
+  - pyside6=6.8.3=py313h5f61773_0
+  - pysocks=1.7.1=pyha55dd90_7
+  - python=3.13.2=hf636f53_101_cp313
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.13=5_cp313
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyvista=0.44.2=pyhd8ed1ab_1
+  - pyyaml=6.0.2=py313h8060acc_2
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.8.3=h6441bc3_1
+  - rav1e=0.6.6=he8a937b_2
+  - re2=2024.07.02=h9925aae_3
+  - readline=8.2=h8c095d6_2
+  - referencing=0.36.2=pyh29332c3_0
+  - requests=2.32.3=pyhd8ed1ab_1
+  - rpds-py=0.24.0=py313h6071e0b_0
+  - s2n=1.5.14=h6c98b2b_0
+  - scipy=1.15.2=py313h86fcf2b_0
+  - scooby=0.10.0=pyhd8ed1ab_1
+  - sdl2=2.32.50=h9b8e6db_1
+  - sdl3=3.2.8=h3083f51_0
+  - six=1.17.0=pyhd8ed1ab_0
+  - smmap=5.0.2=pyhd8ed1ab_0
+  - snappy=1.2.1=h8bd8927_1
+  - sqlite=3.49.1=h9eae976_2
+  - streamlit=1.44.0=pyhd8ed1ab_1
+  - svt-av1=3.0.2=h5888daf_0
+  - tbb=2022.0.0=hceb3a55_0
+  - tenacity=9.0.0=pyhd8ed1ab_1
+  - tk=8.6.13=noxft_h4845f30_101
+  - toml=0.10.2=pyhd8ed1ab_1
+  - tornado=6.4.2=py313h536fd9c_0
+  - typing-extensions=4.13.0=h9fa5a19_1
+  - typing_extensions=4.13.0=pyh29332c3_1
+  - tzdata=2025b=h78e105d_0
+  - uriparser=0.9.8=hac33072_0
+  - urllib3=2.3.0=pyhd8ed1ab_0
+  - utfcpp=4.0.6=h005c6e1_0
+  - vtk=9.3.1=qt_py313h71fb23e_216
+  - vtk-base=9.3.1=qt_py313ha954bcc_216
+  - vtk-io-ffmpeg=9.3.1=qt_py313h71fb23e_216
+  - watchdog=6.0.0=py313h78bf25f_0
+  - wayland=1.23.1=h3e06ad9_0
+  - wayland-protocols=1.42=hd8ed1ab_0
+  - werkzeug=3.1.3=pyhd8ed1ab_1
+  - wslink=2.3.3=pyhd8ed1ab_0
+  - x264=1!164.3095=h166bdaf_2
+  - x265=3.5=h924138e_3
+  - xcb-util=0.4.1=hb711507_2
+  - xcb-util-cursor=0.1.5=hb9d3cd8_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xerces-c=3.2.5=h988505b_2
+  - xkeyboard-config=2.43=hb9d3cd8_0
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.1=hb9d3cd8_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxscrnsaver=1.2.4=hb9d3cd8_0
+  - xorg-libxt=1.3.1=hb9d3cd8_0
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.18.3=py313h8060acc_1
+  - zipp=3.21.0=pyhd8ed1ab_1
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstandard=0.23.0=py313h536fd9c_1
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - stpyvista=1.43
+    - reuse==5.0.2
+    - stpyvista==0.1.4
